The Better Mega Menu 8.x-1.0-dev, 2020-08-07
--------------------------------------------
- Issue #2882051 by knaffles, maithili11: Top level drop downs do not work on
  touch devices when the menu item path is set to <nolink>

The Better Mega Menu 8.x-1.0-dev, 2020-08-04
--------------------------------------------
- Issue #2952410 by ankitjain28may, SivaprasadC: Typo in
  css/tb_megamenu.default.css
- Issue #2982006 by brahmjeet789, Neetika K, Vidushi Mehta: Hook help is missing
- Issue #2921195 by Zemelia, pafa7a: Missing array keys cause notices
- Issue #2996857 by knyshuk.vova: Incorrect contextual link generation leads to
  an error.
- Issue #3045390 by RuslanP, knaffles: Module Description: add dot to the end of
  the sentence.
- Issue #3095820 by themodularlab, knaffles, RuslanP: D8 Accessibility Upgrades
- Added readme.md